[tool.poetry]
name = "langgraph-example"
version = "0.1.0"
description = "Ejemplos de sistemas multi-agente utilizando LangChain y LangGraph"
authors = ["Tibiritabara <ricardo.santos.diaz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.1.19"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.20"
langchain-core = "^0.2.28"
langchain = "^0.2.12"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
langchain-community = "^0.2.12"
langchain-experimental = "^0.0.64"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pylint = "^3.2.6"
mypy = "^1.11.1"
jupyterlab = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
